[gd_scene load_steps=7 format=2]

[ext_resource path="res://common/themes/default.theme" type="Theme" id=1]
[ext_resource path="res://screens/game/menu.gd" type="Script" id=2]
[ext_resource path="res://screens/game/title/adventure.tscn" type="PackedScene" id=3]
[ext_resource path="res://screens/game/title/little.tscn" type="PackedScene" id=4]
[ext_resource path="res://screens/tree-village/images/background.png" type="Texture" id=5]
[ext_resource path="res://screens/game/keyboardGame.tscn" type="PackedScene" id=6]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 0.997617, 1 )
size_flags_horizontal = 7
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 3.34032, 1.88094 )
texture = ExtResource( 5 )
stretch_mode = 1

[node name="adventure" parent="." instance=ExtResource( 3 )]
position = Vector2( 83.1983, 172 )
scale = Vector2( 0.696126, 0.839133 )

[node name="little" parent="." instance=ExtResource( 4 )]
position = Vector2( -3.00717, 82 )
scale = Vector2( 0.756828, 0.669435 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_bottom = 0.129
margin_left = 81.1935
margin_top = 126.0
margin_right = 281.193
margin_bottom = 145.78
rect_scale = Vector2( 0.813182, 0.890981 )
size_flags_vertical = 0
custom_constants/separation = 9
alignment = 1

[node name="btnNew" type="Button" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 4
text = "Nouvelle partie"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnLoad" type="Button" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 200.0
margin_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 4
text = "Charger une partie"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="keyboard" parent="CanvasLayer" instance=ExtResource( 6 )]
visible = false
margin_left = 0.559881
margin_right = 0.559875

[node name="lang" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="btnFR" type="Button" parent="lang"]
margin_left = 264.306
margin_top = 3.33258
margin_right = 286.306
margin_bottom = 20.3326
text = "FR"

[node name="btnEN" type="Button" parent="lang"]
margin_left = 292.405
margin_top = 3.33258
margin_right = 314.405
margin_bottom = 20.3326
text = "EN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="version" type="Label" parent="."]
margin_left = 273.652
margin_top = 26.0
margin_right = 313.652
margin_bottom = 33.0
text = "N.N"
align = 2

[connection signal="button_down" from="VBoxContainer/btnNew" to="." method="_on_btnNew_button_down"]
[connection signal="button_down" from="VBoxContainer/btnLoad" to="." method="_on_btnLoad_button_down"]
[connection signal="close" from="CanvasLayer/keyboard" to="." method="_on_keyboard_close"]
[connection signal="fillField" from="CanvasLayer/keyboard" to="." method="_on_keyboard_fillField"]
[connection signal="button_down" from="lang/btnFR" to="." method="_on_btnFR_button_down"]
[connection signal="button_down" from="lang/btnEN" to="." method="_on_btnEN_button_down"]
